// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components | Badge Default 1`] = `
.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 24px;
}

.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: inline-block;
  vertical-align: baseline;
  font-size: .75rem;
  font-weight: 700;
  white-space: nowrap;
  padding-left: 4px;
  padding-right: 4px;
  border-radius: 8px;
  color: white;
  background-color: var(--theme-ui-colors-primary,#13AFE5);
  color: var(--theme-ui-colors-background,#fff);
  background-color: var(--theme-ui-colors-primary,#13AFE5);
  padding-left: 8px;
  padding-right: 8px;
  border-radius: 8px;
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  >
    Badge
  </div>
</div>
`;

exports[`Storyshots Components | Badge Outline 1`] = `
.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 24px;
}

.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: inline-block;
  vertical-align: baseline;
  font-size: .75rem;
  font-weight: 700;
  white-space: nowrap;
  padding-left: 4px;
  padding-right: 4px;
  border-radius: 8px;
  color: white;
  background-color: var(--theme-ui-colors-primary,#13AFE5);
  color: var(--theme-ui-colors-primary,#13AFE5);
  background-color: var(--theme-ui-colors-transparent,transparent);
  border-radius: 8px;
  border: 1px solid;
  padding-left: 8px;
  padding-right: 8px;
  border-color: var(--theme-ui-colors-primary,#13AFE5);
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  >
    Badge
  </div>
</div>
`;

exports[`Storyshots Components | Button Danger 1`] = `
.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 24px;
}

.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: var(--theme-ui-colors-primary,#13AFE5);
  border: 0;
  border-radius: 32px;
  border-radius: 32px;
  border-color: var(--theme-ui-colors-transparent,transparent);
  font-family: Muli,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-weight: 700;
  cursor: pointer;
  -webkit-letter-spacing: default;
  -moz-letter-spacing: default;
  -ms-letter-spacing: default;
  letter-spacing: default;
  line-height: inherit;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1),0 1px 2px 0 rgba(0,0,0,0.06);
  -webkit-transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  color: var(--theme-ui-colors-background,#fff);
  background-color: var(--theme-ui-colors-red-6,#c53030);
  font-size: 1rem;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 42px;
}

.emotion-0:hover {
  box-shadow: 0 4px 6px -1px rgba(0,0,0,0.1),0 2px 4px -1px rgba(0,0,0,0.06);
}

.emotion-0:active {
  border-style: solid;
  -webkit-transform: scale(.98);
  -ms-transform: scale(.98);
  transform: scale(.98);
}

.emotion-0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<div
  className="emotion-1"
>
  <button
    className="emotion-0"
    onClick={[Function]}
    type="button"
  >
    Danger Button
  </button>
</div>
`;

exports[`Storyshots Components | Button Outline 1`] = `
.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 24px;
}

.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: var(--theme-ui-colors-primary,#13AFE5);
  border: 0;
  border-radius: 32px;
  border-radius: 32px;
  border-color: var(--theme-ui-colors-primary,#13AFE5);
  font-family: Muli,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-weight: 700;
  cursor: pointer;
  -webkit-letter-spacing: default;
  -moz-letter-spacing: default;
  -ms-letter-spacing: default;
  letter-spacing: default;
  line-height: inherit;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1),0 1px 2px 0 rgba(0,0,0,0.06);
  -webkit-transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  color: var(--theme-ui-colors-primary,#13AFE5);
  background-color: var(--theme-ui-colors-transparent,transparent);
  border: 1px solid;
  font-size: 1rem;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 42px;
}

.emotion-0:hover {
  box-shadow: 0 4px 6px -1px rgba(0,0,0,0.1),0 2px 4px -1px rgba(0,0,0,0.06);
}

.emotion-0:active {
  border-style: solid;
  -webkit-transform: scale(.98);
  -ms-transform: scale(.98);
  transform: scale(.98);
}

.emotion-0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<div
  className="emotion-1"
>
  <button
    className="emotion-0"
    onClick={[Function]}
    type="button"
  >
    Outline Button
  </button>
</div>
`;

exports[`Storyshots Components | Button Primary 1`] = `
.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 24px;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: var(--theme-ui-colors-primary,#13AFE5);
  border: 0;
  border-radius: 32px;
  border-radius: 32px;
  border-color: var(--theme-ui-colors-transparent,transparent);
  font-family: Muli,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-weight: 700;
  cursor: pointer;
  -webkit-letter-spacing: default;
  -moz-letter-spacing: default;
  -ms-letter-spacing: default;
  letter-spacing: default;
  line-height: inherit;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1),0 1px 2px 0 rgba(0,0,0,0.06);
  -webkit-transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  color: var(--theme-ui-colors-background,#fff);
  background-color: var(--theme-ui-colors-primary,#13AFE5);
  margin-right: 8px;
  font-size: 1rem;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 42px;
}

.emotion-0:hover {
  box-shadow: 0 4px 6px -1px rgba(0,0,0,0.1),0 2px 4px -1px rgba(0,0,0,0.06);
}

.emotion-0:active {
  border-style: solid;
  -webkit-transform: scale(.98);
  -ms-transform: scale(.98);
  transform: scale(.98);
}

.emotion-0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: var(--theme-ui-colors-primary,#13AFE5);
  border: 0;
  border-radius: 32px;
  border-radius: 32px;
  border-color: var(--theme-ui-colors-transparent,transparent);
  font-family: Muli,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-weight: 700;
  cursor: pointer;
  -webkit-letter-spacing: default;
  -moz-letter-spacing: default;
  -ms-letter-spacing: default;
  letter-spacing: default;
  line-height: inherit;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1),0 1px 2px 0 rgba(0,0,0,0.06);
  -webkit-transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  color: var(--theme-ui-colors-background,#fff);
  background-color: var(--theme-ui-colors-primary,#13AFE5);
  font-size: 1rem;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 42px;
}

.emotion-1:hover {
  box-shadow: 0 4px 6px -1px rgba(0,0,0,0.1),0 2px 4px -1px rgba(0,0,0,0.06);
}

.emotion-1:active {
  border-style: solid;
  -webkit-transform: scale(.98);
  -ms-transform: scale(.98);
  transform: scale(.98);
}

.emotion-1:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<div
  className="emotion-3"
>
  <div
    className="emotion-2"
  >
    <button
      className="emotion-0"
      onClick={[Function]}
      type="button"
    >
      Primary Button
    </button>
    <button
      className="emotion-1"
      disabled={true}
      type="button"
    >
      Disabled Button
    </button>
  </div>
</div>
`;

exports[`Storyshots Components | Button Secondary 1`] = `
.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 24px;
}

.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: var(--theme-ui-colors-primary,#13AFE5);
  border: 0;
  border-radius: 32px;
  border-radius: 32px;
  border-color: var(--theme-ui-colors-transparent,transparent);
  font-family: Muli,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-weight: 700;
  cursor: pointer;
  -webkit-letter-spacing: default;
  -moz-letter-spacing: default;
  -ms-letter-spacing: default;
  letter-spacing: default;
  line-height: inherit;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1),0 1px 2px 0 rgba(0,0,0,0.06);
  -webkit-transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  color: var(--theme-ui-colors-background,#fff);
  background-color: var(--theme-ui-colors-gray-9,#364145);
  font-size: 1rem;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 42px;
}

.emotion-0:hover {
  box-shadow: 0 4px 6px -1px rgba(0,0,0,0.1),0 2px 4px -1px rgba(0,0,0,0.06);
}

.emotion-0:active {
  border-style: solid;
  -webkit-transform: scale(.98);
  -ms-transform: scale(.98);
  transform: scale(.98);
}

.emotion-0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<div
  className="emotion-1"
>
  <button
    className="emotion-0"
    onClick={[Function]}
    type="button"
  >
    Secondary Button
  </button>
</div>
`;

exports[`Storyshots Components | Button Sizes 1`] = `
.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 24px;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: var(--theme-ui-colors-primary,#13AFE5);
  border: 0;
  border-radius: 32px;
  border-radius: 32px;
  border-color: var(--theme-ui-colors-transparent,transparent);
  font-family: Muli,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-weight: 700;
  cursor: pointer;
  -webkit-letter-spacing: default;
  -moz-letter-spacing: default;
  -ms-letter-spacing: default;
  letter-spacing: default;
  line-height: inherit;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1),0 1px 2px 0 rgba(0,0,0,0.06);
  -webkit-transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  color: var(--theme-ui-colors-background,#fff);
  background-color: var(--theme-ui-colors-primary,#13AFE5);
  margin-right: 8px;
  font-size: 1rem;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 42px;
}

.emotion-1:hover {
  box-shadow: 0 4px 6px -1px rgba(0,0,0,0.1),0 2px 4px -1px rgba(0,0,0,0.06);
}

.emotion-1:active {
  border-style: solid;
  -webkit-transform: scale(.98);
  -ms-transform: scale(.98);
  transform: scale(.98);
}

.emotion-1:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: var(--theme-ui-colors-primary,#13AFE5);
  border: 0;
  border-radius: 32px;
  border-radius: 32px;
  border-color: var(--theme-ui-colors-transparent,transparent);
  font-family: Muli,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-weight: 700;
  cursor: pointer;
  -webkit-letter-spacing: default;
  -moz-letter-spacing: default;
  -ms-letter-spacing: default;
  letter-spacing: default;
  line-height: inherit;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1),0 1px 2px 0 rgba(0,0,0,0.06);
  -webkit-transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  color: var(--theme-ui-colors-background,#fff);
  background-color: var(--theme-ui-colors-primary,#13AFE5);
  margin-right: 8px;
  font-size: .875rem;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-0:hover {
  box-shadow: 0 4px 6px -1px rgba(0,0,0,0.1),0 2px 4px -1px rgba(0,0,0,0.06);
}

.emotion-0:active {
  border-style: solid;
  -webkit-transform: scale(.98);
  -ms-transform: scale(.98);
  transform: scale(.98);
}

.emotion-0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: var(--theme-ui-colors-primary,#13AFE5);
  border: 0;
  border-radius: 32px;
  border-radius: 32px;
  border-color: var(--theme-ui-colors-transparent,transparent);
  font-family: Muli,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-weight: 700;
  cursor: pointer;
  -webkit-letter-spacing: default;
  -moz-letter-spacing: default;
  -ms-letter-spacing: default;
  letter-spacing: default;
  line-height: inherit;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1),0 1px 2px 0 rgba(0,0,0,0.06);
  -webkit-transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  color: var(--theme-ui-colors-background,#fff);
  background-color: var(--theme-ui-colors-primary,#13AFE5);
  font-size: 1.25rem;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-2:hover {
  box-shadow: 0 4px 6px -1px rgba(0,0,0,0.1),0 2px 4px -1px rgba(0,0,0,0.06);
}

.emotion-2:active {
  border-style: solid;
  -webkit-transform: scale(.98);
  -ms-transform: scale(.98);
  transform: scale(.98);
}

.emotion-2:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

<div
  className="emotion-4"
>
  <div
    className="emotion-3"
  >
    <button
      className="emotion-0"
      onClick={[Function]}
      type="button"
    >
      Small Button
    </button>
    <button
      className="emotion-1"
      onClick={[Function]}
      type="button"
    >
      Medium Button
    </button>
    <button
      className="emotion-2"
      onClick={[Function]}
      type="button"
    >
      Large Button
    </button>
  </div>
</div>
`;

exports[`Storyshots Components | Card Compact 1`] = `
.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 24px;
}

.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: var(--theme-ui-colors-text,#38383e);
  font-family: Muli,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  line-height: 1.6;
  font-weight: 400;
  -webkit-letter-spacing: .04em;
  -moz-letter-spacing: .04em;
  -ms-letter-spacing: .04em;
  letter-spacing: .04em;
  opacity: 0.8;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  border-radius: 16px;
  border: 1px solid;
  border-color: var(--theme-ui-colors-muted,#ebeeef);
}

<div
  className="emotion-2"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-0"
    >
      Compact card
    </div>
  </div>
</div>
`;

exports[`Storyshots Components | Card Primary 1`] = `
.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 24px;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 24px;
  border-radius: 16px;
  border: 1px solid;
  border-color: var(--theme-ui-colors-muted,#ebeeef);
}

.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: var(--theme-ui-colors-text,#38383e);
  font-family: Muli,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  line-height: 1.6;
  font-weight: 400;
  -webkit-letter-spacing: .04em;
  -moz-letter-spacing: .04em;
  -ms-letter-spacing: .04em;
  letter-spacing: .04em;
  opacity: 0.8;
}

<div
  className="emotion-2"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-0"
    >
      Primary card
    </div>
  </div>
</div>
`;

exports[`Storyshots Components | Colors Palette 1`] = `
.emotion-106 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 24px;
}

.emotion-48 {
  font-size: .75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  margin: 8px;
}

.emotion-0 {
  width: 128px;
  height: 128px;
  background-color: var(--theme-ui-colors-text,#38383e);
}

.emotion-1 {
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-3 {
  width: 128px;
  height: 128px;
  background-color: var(--theme-ui-colors-background,#fff);
}

.emotion-6 {
  width: 128px;
  height: 128px;
  background-color: var(--theme-ui-colors-primary,#13AFE5);
}

.emotion-9 {
  width: 128px;
  height: 128px;
  background-color: var(--theme-ui-colors-transparent,transparent);
}

.emotion-12 {
  width: 128px;
  height: 128px;
  background-color: var(--theme-ui-colors-secondary,#061B2B);
}

.emotion-15 {
  width: 128px;
  height: 128px;
  background-color: var(--theme-ui-colors-muted,#ebeeef);
}

.emotion-18 {
  width: 128px;
  height: 128px;
  background-color: var(--theme-ui-colors-gray-0,#f8fafa);
}

.emotion-21 {
  width: 128px;
  height: 128px;
  background-color: var(--theme-ui-colors-gray-1,#ebeeef);
}

.emotion-24 {
  width: 128px;
  height: 128px;
  background-color: var(--theme-ui-colors-gray-2,#dce2e3);
}

.emotion-27 {
  width: 128px;
  height: 128px;
  background-color: var(--theme-ui-colors-gray-3,#ccd4d7);
}

.emotion-30 {
  width: 128px;
  height: 128px;
  background-color: var(--theme-ui-colors-gray-4,#bbc6c9);
}

.emotion-33 {
  width: 128px;
  height: 128px;
  background-color: var(--theme-ui-colors-gray-5,#a8b5ba);
}

.emotion-36 {
  width: 128px;
  height: 128px;
  background-color: var(--theme-ui-colors-gray-6,#92a3a8);
}

.emotion-39 {
  width: 128px;
  height: 128px;
  background-color: var(--theme-ui-colors-gray-7,#778d93);
}

.emotion-42 {
  width: 128px;
  height: 128px;
  background-color: var(--theme-ui-colors-gray-8,#5c6f75);
}

.emotion-45 {
  width: 128px;
  height: 128px;
  background-color: var(--theme-ui-colors-gray-9,#364145);
}

.emotion-49 {
  width: 128px;
  height: 128px;
  background-color: var(--theme-ui-colors-orange-0,#fffaf0);
}

.emotion-52 {
  width: 128px;
  height: 128px;
  background-color: var(--theme-ui-colors-orange-1,#feebc8);
}

.emotion-55 {
  width: 128px;
  height: 128px;
  background-color: var(--theme-ui-colors-orange-2,#fbd38d);
}

.emotion-58 {
  width: 128px;
  height: 128px;
  background-color: var(--theme-ui-colors-orange-3,#f6ad55);
}

.emotion-61 {
  width: 128px;
  height: 128px;
  background-color: var(--theme-ui-colors-orange-4,#ed8936);
}

.emotion-64 {
  width: 128px;
  height: 128px;
  background-color: var(--theme-ui-colors-orange-5,#dd6b20);
}

.emotion-67 {
  width: 128px;
  height: 128px;
  background-color: var(--theme-ui-colors-orange-6,#c05621);
}

.emotion-70 {
  width: 128px;
  height: 128px;
  background-color: var(--theme-ui-colors-orange-7,#9c4221);
}

.emotion-73 {
  width: 128px;
  height: 128px;
  background-color: var(--theme-ui-colors-orange-8,#7b341e);
}

.emotion-77 {
  width: 128px;
  height: 128px;
  background-color: var(--theme-ui-colors-red-0,#fff5f5);
}

.emotion-80 {
  width: 128px;
  height: 128px;
  background-color: var(--theme-ui-colors-red-1,#fed7d7);
}

.emotion-83 {
  width: 128px;
  height: 128px;
  background-color: var(--theme-ui-colors-red-2,#feb2b2);
}

.emotion-86 {
  width: 128px;
  height: 128px;
  background-color: var(--theme-ui-colors-red-3,#fc8181);
}

.emotion-89 {
  width: 128px;
  height: 128px;
  background-color: var(--theme-ui-colors-red-4,#f56565);
}

.emotion-92 {
  width: 128px;
  height: 128px;
  background-color: var(--theme-ui-colors-red-5,#e53e3e);
}

.emotion-95 {
  width: 128px;
  height: 128px;
  background-color: var(--theme-ui-colors-red-6,#c53030);
}

.emotion-98 {
  width: 128px;
  height: 128px;
  background-color: var(--theme-ui-colors-red-7,#9b2c2c);
}

.emotion-101 {
  width: 128px;
  height: 128px;
  background-color: var(--theme-ui-colors-red-8,#742a2a);
}

<div
  className="emotion-106"
>
  <div
    style={
      Object {
        "marginLeft": -8,
        "marginRight": -8,
      }
    }
  >
    <div>
      <div
        className="emotion-48"
      >
        <div
          className="emotion-2"
          title="#38383E"
        >
          <div
            className="emotion-0"
          />
          <div
            className="emotion-1"
          >
            text
          </div>
        </div>
        <div
          className="emotion-2"
          title="#FFFFFF"
        >
          <div
            className="emotion-3"
          />
          <div
            className="emotion-1"
          >
            background
          </div>
        </div>
        <div
          className="emotion-2"
          title="#13AFE5"
        >
          <div
            className="emotion-6"
          />
          <div
            className="emotion-1"
          >
            primary
          </div>
        </div>
        <div
          className="emotion-2"
          title="#000000"
        >
          <div
            className="emotion-9"
          />
          <div
            className="emotion-1"
          >
            transparent
          </div>
        </div>
        <div
          className="emotion-2"
          title="#061B2B"
        >
          <div
            className="emotion-12"
          />
          <div
            className="emotion-1"
          >
            secondary
          </div>
        </div>
        <div
          className="emotion-2"
          title="#EBEEEF"
        >
          <div
            className="emotion-15"
          />
          <div
            className="emotion-1"
          >
            muted
          </div>
        </div>
        <div>
          <div
            className="emotion-48"
          >
            <div
              className="emotion-2"
              title="#F8FAFA"
            >
              <div
                className="emotion-18"
              />
              <div
                className="emotion-1"
              >
                gray.0
              </div>
            </div>
            <div
              className="emotion-2"
              title="#EBEEEF"
            >
              <div
                className="emotion-21"
              />
              <div
                className="emotion-1"
              >
                gray.1
              </div>
            </div>
            <div
              className="emotion-2"
              title="#DCE2E3"
            >
              <div
                className="emotion-24"
              />
              <div
                className="emotion-1"
              >
                gray.2
              </div>
            </div>
            <div
              className="emotion-2"
              title="#CCD4D7"
            >
              <div
                className="emotion-27"
              />
              <div
                className="emotion-1"
              >
                gray.3
              </div>
            </div>
            <div
              className="emotion-2"
              title="#BBC6C9"
            >
              <div
                className="emotion-30"
              />
              <div
                className="emotion-1"
              >
                gray.4
              </div>
            </div>
            <div
              className="emotion-2"
              title="#A8B5BA"
            >
              <div
                className="emotion-33"
              />
              <div
                className="emotion-1"
              >
                gray.5
              </div>
            </div>
            <div
              className="emotion-2"
              title="#92A3A8"
            >
              <div
                className="emotion-36"
              />
              <div
                className="emotion-1"
              >
                gray.6
              </div>
            </div>
            <div
              className="emotion-2"
              title="#778D93"
            >
              <div
                className="emotion-39"
              />
              <div
                className="emotion-1"
              >
                gray.7
              </div>
            </div>
            <div
              className="emotion-2"
              title="#5C6F75"
            >
              <div
                className="emotion-42"
              />
              <div
                className="emotion-1"
              >
                gray.8
              </div>
            </div>
            <div
              className="emotion-2"
              title="#364145"
            >
              <div
                className="emotion-45"
              />
              <div
                className="emotion-1"
              >
                gray.9
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            className="emotion-48"
          >
            <div
              className="emotion-2"
              title="#FFFAF0"
            >
              <div
                className="emotion-49"
              />
              <div
                className="emotion-1"
              >
                orange.0
              </div>
            </div>
            <div
              className="emotion-2"
              title="#FEEBC8"
            >
              <div
                className="emotion-52"
              />
              <div
                className="emotion-1"
              >
                orange.1
              </div>
            </div>
            <div
              className="emotion-2"
              title="#FBD38D"
            >
              <div
                className="emotion-55"
              />
              <div
                className="emotion-1"
              >
                orange.2
              </div>
            </div>
            <div
              className="emotion-2"
              title="#F6AD55"
            >
              <div
                className="emotion-58"
              />
              <div
                className="emotion-1"
              >
                orange.3
              </div>
            </div>
            <div
              className="emotion-2"
              title="#ED8936"
            >
              <div
                className="emotion-61"
              />
              <div
                className="emotion-1"
              >
                orange.4
              </div>
            </div>
            <div
              className="emotion-2"
              title="#DD6B20"
            >
              <div
                className="emotion-64"
              />
              <div
                className="emotion-1"
              >
                orange.5
              </div>
            </div>
            <div
              className="emotion-2"
              title="#C05621"
            >
              <div
                className="emotion-67"
              />
              <div
                className="emotion-1"
              >
                orange.6
              </div>
            </div>
            <div
              className="emotion-2"
              title="#9C4221"
            >
              <div
                className="emotion-70"
              />
              <div
                className="emotion-1"
              >
                orange.7
              </div>
            </div>
            <div
              className="emotion-2"
              title="#7B341E"
            >
              <div
                className="emotion-73"
              />
              <div
                className="emotion-1"
              >
                orange.8
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            className="emotion-48"
          >
            <div
              className="emotion-2"
              title="#FFF5F5"
            >
              <div
                className="emotion-77"
              />
              <div
                className="emotion-1"
              >
                red.0
              </div>
            </div>
            <div
              className="emotion-2"
              title="#FED7D7"
            >
              <div
                className="emotion-80"
              />
              <div
                className="emotion-1"
              >
                red.1
              </div>
            </div>
            <div
              className="emotion-2"
              title="#FEB2B2"
            >
              <div
                className="emotion-83"
              />
              <div
                className="emotion-1"
              >
                red.2
              </div>
            </div>
            <div
              className="emotion-2"
              title="#FC8181"
            >
              <div
                className="emotion-86"
              />
              <div
                className="emotion-1"
              >
                red.3
              </div>
            </div>
            <div
              className="emotion-2"
              title="#F56565"
            >
              <div
                className="emotion-89"
              />
              <div
                className="emotion-1"
              >
                red.4
              </div>
            </div>
            <div
              className="emotion-2"
              title="#E53E3E"
            >
              <div
                className="emotion-92"
              />
              <div
                className="emotion-1"
              >
                red.5
              </div>
            </div>
            <div
              className="emotion-2"
              title="#C53030"
            >
              <div
                className="emotion-95"
              />
              <div
                className="emotion-1"
              >
                red.6
              </div>
            </div>
            <div
              className="emotion-2"
              title="#9B2C2C"
            >
              <div
                className="emotion-98"
              />
              <div
                className="emotion-1"
              >
                red.7
              </div>
            </div>
            <div
              className="emotion-2"
              title="#742A2A"
            >
              <div
                className="emotion-101"
              />
              <div
                className="emotion-1"
              >
                red.8
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components | Embed Default 1`] = `
.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 24px;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  height: 0;
  padding-bottom: 56.25%;
  position: relative;
  overflow: hidden;
}

.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  bottom: 0;
  left: 0;
  border: 0;
}

<div
  className="emotion-2"
>
  <div
    className="emotion-1"
  >
    <iframe
      allowFullScreen={true}
      className="emotion-0"
      frameBorder={0}
      height={315}
      src="https://www.youtube.com/watch?v=mTccP-6XcpQ"
      width={560}
    />
  </div>
</div>
`;

exports[`Storyshots Components | IconButton Default 1`] = `
.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 24px;
}

.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px;
  width: 32px;
  height: 32px;
  color: inherit;
  background-color: var(--theme-ui-colors-transparent,transparent);
  border: none;
  border-radius: 32px;
  border: 1px solid;
  border-color: var(--theme-ui-colors-text,#38383e);
  height: 42px;
  width: 42px;
  min-height: 42px;
  min-width: 42px;
  padding: 4px;
}

.emotion-0:focus {
  outline: none;
  border-color: var(--theme-ui-colors-primary,#13AFE5);
}

<div
  className="emotion-1"
>
  <button
    aria-label="Toggle dark mode"
    className="emotion-0"
    onClick={[Function]}
  >
    <svg
      fill="currentcolor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx={12}
        cy={12}
        fill="none"
        r={11}
        stroke="currentcolor"
        strokeWidth={2}
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots Components | Message Danger 1`] = `
.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 24px;
}

.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 16px;
  padding-left: 12px;
  border-left-width: 4px;
  border-left-style: solid;
  border-left-color: var(--theme-ui-colors-primary,#13AFE5);
  border-radius: 32px;
  background-color: highlight;
  border-radius: 4px;
  border-left-color: var(--theme-ui-colors-red-7,#9b2c2c);
  background-color: var(--theme-ui-colors-red-1,#fed7d7);
  color: var(--theme-ui-colors-red-8,#742a2a);
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  >
    This is just a message, but dangerous
  </div>
</div>
`;

exports[`Storyshots Components | Message Default 1`] = `
.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 24px;
}

.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 16px;
  padding-left: 12px;
  border-left-width: 4px;
  border-left-style: solid;
  border-left-color: var(--theme-ui-colors-primary,#13AFE5);
  border-radius: 32px;
  background-color: highlight;
  border-radius: 4px;
  border-left-color: var(--theme-ui-colors-gray-7,#778d93);
  background-color: var(--theme-ui-colors-gray-1,#ebeeef);
  color: var(--theme-ui-colors-gray-8,#5c6f75);
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  >
    This is just a message
  </div>
</div>
`;

exports[`Storyshots Components | Nav Default 1`] = `
.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 24px;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  display: inline-block;
  text-align: center;
  font-size: .875rem;
  padding-left: 4px;
  padding-right: 4px;
  padding-top: 8px;
  padding-bottom: 8px;
  margin-left: 8px;
  margin-right: 8px;
  cursor: pointer;
  border-top: 4px solid;
  border-color: var(--theme-ui-colors-transparent,transparent);
  -webkit-transition: all 200ms cubic-bezier(0.4,0,0.2,1);
  transition: all 200ms cubic-bezier(0.4,0,0.2,1);
}

.emotion-0:hover,
.emotion-0:focus,
.emotion-0.active {
  color: var(--theme-ui-colors-primary,#13AFE5);
}

.emotion-0[aria-current="page"] {
  border-color: var(--theme-ui-colors-primary,#13AFE5);
}

<div
  className="emotion-7"
>
  <nav
    aria-label="Main"
    className="emotion-6"
  >
    <a
      aria-current="page"
      className="emotion-0"
    >
      Home
    </a>
    <a
      className="emotion-0"
    >
      Clients
    </a>
    <a
      className="emotion-0"
    >
      Users
    </a>
    <a
      className="emotion-0"
    >
      Permissions
    </a>
    <a
      className="emotion-0"
    >
      Reports
    </a>
    <a
      className="emotion-0"
    >
      Configuration
    </a>
  </nav>
</div>
`;

exports[`Storyshots Components | Table Default 1`] = `
.emotion-12 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 24px;
}

.emotion-11 {
  padding: 32px;
  width: 100%;
  border-collapse: collapse;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-weight: 700;
  text-align: left;
  border-bottom: 1px solid;
  opacity: 1;
  border-color: var(--theme-ui-colors-gray-1,#ebeeef);
}

.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-weight: inherit;
  text-align: left;
  opacity: 0.8;
  height: 64px;
}

<div
  className="emotion-12"
>
  <table
    className="emotion-11"
  >
    <thead
      className="emotion-2"
    >
      <tr>
        <td
          className="emotion-0"
        >
          Name
        </td>
        <td
          className="emotion-0"
        >
          Description
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="emotion-0"
        >
          Warehouse monitoring stack
        </td>
        <td
          className="emotion-0"
        >
          Used to maintain optimal storage conditions.
        </td>
      </tr>
      <tr>
        <td
          className="emotion-0"
        >
          Warehouse monitoring stack
        </td>
        <td
          className="emotion-0"
        >
          Used to maintain optimal storage conditions.
        </td>
      </tr>
      <tr>
        <td
          className="emotion-0"
        >
          Warehouse monitoring stack
        </td>
        <td
          className="emotion-0"
        >
          Used to maintain optimal storage conditions.
        </td>
      </tr>
      <tr>
        <td
          className="emotion-0"
        >
          Warehouse monitoring stack
        </td>
        <td
          className="emotion-0"
        >
          Used to maintain optimal storage conditions.
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components | Typography Body 1`] = `
.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 24px;
}

.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: var(--theme-ui-colors-text,#38383e);
  font-family: Muli,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  line-height: 1.6;
  font-weight: 400;
  -webkit-letter-spacing: .04em;
  -moz-letter-spacing: .04em;
  -ms-letter-spacing: .04em;
  letter-spacing: .04em;
  opacity: 0.8;
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  >
    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
  </div>
</div>
`;

exports[`Storyshots Components | Typography Headings 1`] = `
.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 24px;
}

.emotion-0 {
  color: var(--theme-ui-colors-text,#38383e);
  font-family: inherit;
  line-height: 1.125;
  font-weight: 900;
  -webkit-letter-spacing: -.02em;
  -moz-letter-spacing: -.02em;
  -ms-letter-spacing: -.02em;
  letter-spacing: -.02em;
  font-size: 3rem;
}

.emotion-1 {
  color: var(--theme-ui-colors-text,#38383e);
  font-family: inherit;
  line-height: 1.125;
  font-weight: 900;
  -webkit-letter-spacing: -.02em;
  -moz-letter-spacing: -.02em;
  -ms-letter-spacing: -.02em;
  letter-spacing: -.02em;
  font-size: 2.5rem;
}

.emotion-2 {
  color: var(--theme-ui-colors-text,#38383e);
  font-family: inherit;
  line-height: 1.125;
  font-weight: 900;
  -webkit-letter-spacing: -.02em;
  -moz-letter-spacing: -.02em;
  -ms-letter-spacing: -.02em;
  letter-spacing: -.02em;
  font-size: 2rem;
}

.emotion-3 {
  color: var(--theme-ui-colors-text,#38383e);
  font-family: inherit;
  line-height: 1.125;
  -webkit-letter-spacing: -.02em;
  -moz-letter-spacing: -.02em;
  -ms-letter-spacing: -.02em;
  letter-spacing: -.02em;
  font-size: 1.5rem;
}

.emotion-4 {
  color: var(--theme-ui-colors-text,#38383e);
  font-family: inherit;
  line-height: 1.125;
  -webkit-letter-spacing: -.02em;
  -moz-letter-spacing: -.02em;
  -ms-letter-spacing: -.02em;
  letter-spacing: -.02em;
  font-size: 1.25rem;
}

.emotion-5 {
  color: var(--theme-ui-colors-text,#38383e);
  font-family: inherit;
  line-height: 1.125;
  -webkit-letter-spacing: -.02em;
  -moz-letter-spacing: -.02em;
  -ms-letter-spacing: -.02em;
  letter-spacing: -.02em;
  font-size: 1rem;
}

<div
  className="emotion-6"
>
  <h1
    className="emotion-0"
  >
    Heading 1
  </h1>
  <h2
    className="emotion-1"
  >
    Heading 2
  </h2>
  <h3
    className="emotion-2"
  >
    Heading 3
  </h3>
  <h4
    className="emotion-3"
  >
    Heading 4
  </h4>
  <h5
    className="emotion-4"
  >
    Heading 5
  </h5>
  <h6
    className="emotion-5"
  >
    Heading 6
  </h6>
</div>
`;

exports[`Storyshots Components | Typography Scale 1`] = `
.emotion-11 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 24px;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.emotion-0 {
  font-family: Muli,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-size: 6rem;
  line-height: 1.6;
  font-weight: 400;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin-right: 16px;
}

.emotion-1 {
  font-family: Muli,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-size: 4rem;
  line-height: 1.6;
  font-weight: 400;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin-right: 16px;
}

.emotion-2 {
  font-family: Muli,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-size: 3rem;
  line-height: 1.6;
  font-weight: 400;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin-right: 16px;
}

.emotion-3 {
  font-family: Muli,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-size: 2.5rem;
  line-height: 1.6;
  font-weight: 400;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin-right: 16px;
}

.emotion-4 {
  font-family: Muli,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-size: 2rem;
  line-height: 1.6;
  font-weight: 400;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin-right: 16px;
}

.emotion-5 {
  font-family: Muli,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-size: 1.5rem;
  line-height: 1.6;
  font-weight: 400;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin-right: 16px;
}

.emotion-6 {
  font-family: Muli,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-size: 1.25rem;
  line-height: 1.6;
  font-weight: 400;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin-right: 16px;
}

.emotion-7 {
  font-family: Muli,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-size: 1rem;
  line-height: 1.6;
  font-weight: 400;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin-right: 16px;
}

.emotion-8 {
  font-family: Muli,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-size: .875rem;
  line-height: 1.6;
  font-weight: 400;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin-right: 16px;
}

.emotion-9 {
  font-family: Muli,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",sans-serif;
  font-size: .75rem;
  line-height: 1.6;
  font-weight: 400;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin-right: 16px;
}

<div
  className="emotion-11"
>
  <div
    className="emotion-10"
  >
    <div
      className="emotion-0"
    >
      6rem
    </div>
    <div
      className="emotion-1"
    >
      4rem
    </div>
    <div
      className="emotion-2"
    >
      3rem
    </div>
    <div
      className="emotion-3"
    >
      2.5rem
    </div>
    <div
      className="emotion-4"
    >
      2rem
    </div>
    <div
      className="emotion-5"
    >
      1.5rem
    </div>
    <div
      className="emotion-6"
    >
      1.25rem
    </div>
    <div
      className="emotion-7"
    >
      1rem
    </div>
    <div
      className="emotion-8"
    >
      .875rem
    </div>
    <div
      className="emotion-9"
    >
      .75rem
    </div>
  </div>
</div>
`;

exports[`Storyshots Forms | Input Default 1`] = `
.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 24px;
}

.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  padding: 8px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-size: inherit;
  line-height: inherit;
  border: 1px solid;
  border-radius: 32px;
  color: inherit;
  background-color: var(--theme-ui-colors-transparent,transparent);
  fontfamily: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  height: 42px;
  color: var(--theme-ui-colors-text,#38383e);
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1),0 1px 2px 0 rgba(0,0,0,0.06);
}

.emotion-0:focus {
  outline: none;
  border-color: var(--theme-ui-colors-primary,#13AFE5);
}

<div
  className="emotion-1"
>
  <input
    className="emotion-0"
    defaultValue="Hello"
  />
</div>
`;

exports[`Storyshots Forms | Label Default 1`] = `
.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 24px;
}

.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: .875rem;
  font-weight: 700;
  padding-left: 4px;
  padding-bottom: 4px;
}

<div
  className="emotion-1"
>
  <label
    className="emotion-0"
  >
    Label
  </label>
</div>
`;

exports[`Storyshots Forms | Radio Default 1`] = `
.emotion-10 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 24px;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: .875rem;
  font-weight: 700;
  padding-left: 4px;
  padding-bottom: 4px;
}

.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  opacity: 0;
  z-index: -1;
  width: 1px;
  height: 1px;
  overflow: hidden;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: none;
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: 9999px;
  color: var(--theme-ui-colors-gray-0,#f8fafa);
  color: var(--theme-ui-colors-gray-1,#ebeeef);
  color: var(--theme-ui-colors-gray-2,#dce2e3);
  color: var(--theme-ui-colors-gray-3,#ccd4d7);
  color: var(--theme-ui-colors-gray-4,#bbc6c9);
  color: var(--theme-ui-colors-gray-5,#a8b5ba);
  color: var(--theme-ui-colors-gray-6,#92a3a8);
  color: var(--theme-ui-colors-gray-7,#778d93);
  color: var(--theme-ui-colors-gray-8,#5c6f75);
  color: var(--theme-ui-colors-gray-9,#364145);
}

input:checked ~ .emotion-1 {
  display: block;
}

input:checked ~ .emotion-1 {
  color: var(--theme-ui-colors-primary,#13AFE5);
}

input:focus ~ .emotion-1 {
  background-color: highlight;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: 9999px;
  color: var(--theme-ui-colors-gray-0,#f8fafa);
  color: var(--theme-ui-colors-gray-1,#ebeeef);
  color: var(--theme-ui-colors-gray-2,#dce2e3);
  color: var(--theme-ui-colors-gray-3,#ccd4d7);
  color: var(--theme-ui-colors-gray-4,#bbc6c9);
  color: var(--theme-ui-colors-gray-5,#a8b5ba);
  color: var(--theme-ui-colors-gray-6,#92a3a8);
  color: var(--theme-ui-colors-gray-7,#778d93);
  color: var(--theme-ui-colors-gray-8,#5c6f75);
  color: var(--theme-ui-colors-gray-9,#364145);
}

input:checked ~ .emotion-2 {
  display: none;
}

input:checked ~ .emotion-2 {
  color: var(--theme-ui-colors-primary,#13AFE5);
}

input:focus ~ .emotion-2 {
  background-color: highlight;
}

<div
  className="emotion-10"
>
  <label
    className="emotion-4"
  >
    <div
      className="emotion-3"
    >
      <input
        className="emotion-0"
        defaultChecked={true}
        name="dark-mode"
        type="radio"
        value="true"
      />
      <svg
        aria-hidden="true"
        className="emotion-1"
        fill="currentcolor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <svg
        aria-hidden="true"
        className="emotion-2"
        fill="currentcolor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
    </div>
    Dark Mode
  </label>
  <label
    className="emotion-4"
  >
    <div
      className="emotion-3"
    >
      <input
        className="emotion-0"
        name="dark-mode"
        type="radio"
        value="false"
      />
      <svg
        aria-hidden="true"
        className="emotion-1"
        fill="currentcolor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <svg
        aria-hidden="true"
        className="emotion-2"
        fill="currentcolor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
    </div>
    Light Mode
  </label>
</div>
`;

exports[`Storyshots Forms | Select Default 1`] = `
.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 24px;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: .875rem;
  font-weight: 700;
  padding-left: 4px;
  padding-bottom: 4px;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  padding: 8px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-size: inherit;
  line-height: inherit;
  border: 1px solid;
  border-radius: 32px;
  color: inherit;
  background-color: var(--theme-ui-colors-transparent,transparent);
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1),0 1px 2px 0 rgba(0,0,0,0.06);
  fontfamily: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  height: 42px;
  width: 100%;
}

.emotion-1:focus {
  outline: none;
  border-color: var(--theme-ui-colors-primary,#13AFE5);
}

@media screen and (min-width:40em) {
  .emotion-1 {
    width: 50%;
  }
}

@media screen and (min-width:56em) {
  .emotion-1 {
    width: 25%;
  }
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-left: -28px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  pointer-events: none;
}

<div
  className="emotion-4"
>
  <label
    className="emotion-0"
    htmlFor="select"
  >
    Select
  </label>
  <div
    className="emotion-3"
  >
    <select
      className="emotion-1"
      defaultValue="Hello"
      id="select"
    >
      <option>
        Hello
      </option>
      <option>
        Hi
      </option>
      <option>
        Awe
      </option>
      <option>
        Yo
      </option>
    </select>
    <svg
      className="emotion-2"
      fill="currentcolor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Forms | Textarea Default 1`] = `
.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 24px;
}

.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  padding: 8px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-size: inherit;
  line-height: inherit;
  border: 1px solid;
  border-radius: 32px;
  color: inherit;
  background-color: var(--theme-ui-colors-transparent,transparent);
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1),0 1px 2px 0 rgba(0,0,0,0.06);
  fontfamily: inherit;
  padding: 16px;
  border-radius: 16px;
}

.emotion-0:focus {
  outline: none;
  border-color: var(--theme-ui-colors-primary,#13AFE5);
}

<div
  className="emotion-1"
>
  <textarea
    className="emotion-0"
    defaultValue="Hi"
    rows={8}
  />
</div>
`;

exports[`Storyshots Layout | Box Default 1`] = `
.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 24px;
}

.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 24px;
  color: white;
  background-color: var(--theme-ui-colors-secondary,#061B2B);
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  >
    test
  </div>
</div>
`;

exports[`Storyshots Layout | Flex Default 1`] = `
.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 24px;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 8px;
  color: var(--theme-ui-colors-background,#fff);
  background-color: var(--theme-ui-colors-primary,#13AFE5);
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 8px;
  background-color: var(--theme-ui-colors-muted,#ebeeef);
}

<div
  className="emotion-3"
>
  <div
    className="emotion-2"
  >
    <div
      className="emotion-0"
    >
      Flex
    </div>
    <div
      className="emotion-1"
    >
      Box
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout | Grid Default 1`] = `
.emotion-5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 24px;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: grid;
  grid-gap: 8px;
  grid-template-columns: repeat(2,1fr);
}

@media screen and (min-width:56em) {
  .emotion-4 {
    grid-template-columns: repeat(4,1fr);
  }
}

.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: var(--theme-ui-colors-background,#fff);
  background-color: var(--theme-ui-colors-primary,#13AFE5);
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  background-color: var(--theme-ui-colors-muted,#ebeeef);
}

<div
  className="emotion-5"
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-0"
    >
      Box
    </div>
    <div
      className="emotion-1"
    >
      Box
    </div>
    <div
      className="emotion-0"
    >
      Box
    </div>
    <div
      className="emotion-1"
    >
      Box
    </div>
  </div>
</div>
`;

exports[`Storyshots Other | Logo Default 1`] = `
.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 24px;
}

.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<div
  className="emotion-1"
>
  <svg
    className="emotion-0"
    height={44}
    width={113}
  >
    <defs>
      <path
        d="M2.927 0h3.512v3.023H2.927z"
        id="prefix__a"
      />
    </defs>
    <g
      fill="none"
      fillRule="evenodd"
    >
      <path
        d="M.046 33.52h8.362V10.88H.046v22.64zM4.204 8.533C1.401 8.533 0 7.23 0 4.623 0 1.983 1.416.664 4.25.664c2.772 0 4.188 1.319 4.25 3.957 0 2.608-1.416 3.911-4.25 3.911h-.046z"
        fill="#13AFE5"
      />
      <path
        d="M13.074 33.52V16.954h-2.91V10.88h2.91v-.736c0-1.38.231-2.7.693-3.957.523-1.442 1.278-2.607 2.264-3.498.893-.828 1.97-1.441 3.234-1.84a11.223 11.223 0 013.372-.506c1.294 0 2.571.138 3.835.414l-.139 6.35a10.032 10.032 0 00-2.125-.23c-1.91 0-2.864.966-2.864 2.899v1.104h4.158v6.074h-4.066V33.52h-8.362zm15.8 0h8.362V10.88h-8.362v22.64zm4.158-24.987c-2.803 0-4.204-1.303-4.204-3.91 0-2.639 1.416-3.958 4.25-3.958 2.772 0 4.188 1.319 4.25 3.957 0 2.608-1.416 3.911-4.25 3.911h-.046zm7.853 10.078c0-1.38-.015-2.791-.046-4.234l-.138-3.497h7.207l.37 2.9h.138c.246-.369.539-.721.878-1.059.43-.398.908-.767 1.432-1.104 1.355-.829 2.864-1.243 4.528-1.243 5.481 0 8.223 3.267 8.223 9.801V33.52h-8.362V21.188c0-2.761-.97-4.142-2.91-4.142-.74 0-1.356.215-1.849.645-.339.338-.631.782-.877 1.334-.155.338-.232.89-.232 1.656V33.52h-8.362V18.61zm34.465-7.96h.37c2.587 0 4.496.997 5.728 2.99h.047c.061 0 .169-.766.323-2.3v-.139l.046-.046h7.161l.046.046h.046c-.123 1.627-.184 3.698-.184 6.212V30.3c0 5.03-1.109 8.497-3.327 10.4-2.125 2.085-5.467 3.129-10.025 3.129-3.296 0-6.145-.569-8.547-1.703v-.046l1.617-6.304h.046c2.187 1.104 4.405 1.656 6.653 1.656 2.587 0 4.25-1.12 4.99-3.359a7.634 7.634 0 00.184-1.657V20.497c0-1.288-.493-2.315-1.478-3.083a3.25 3.25 0 00-1.663-.46c-1.755 0-2.88.89-3.372 2.67-.216.767-.324 1.718-.324 2.852v.046c0 2.485.832 4.127 2.495 4.924.37.154.77.23 1.201.23h.093c.246 0 .523-.03.831-.092v5.292c-.862.49-1.987.736-3.373.736h-.323c-3.389 0-6.052-1.533-7.993-4.601a12.702 12.702 0 01-1.524-6.075v-.552c0-3.62 1.231-6.656 3.696-9.11 2.002-1.75 4.188-2.624 6.56-2.624"
        fill="#061B2B"
      />
      <path
        d="M91.011 26.526c1.879 1.135 3.973 1.702 6.283 1.702 1.664 0 2.495-.414 2.495-1.242 0-.645-.986-1.289-2.957-1.933-2.372-.736-4.127-1.749-5.266-3.037-.986-1.135-1.464-2.423-1.433-3.865 0-2.27.893-4.126 2.68-5.568 1.848-1.472 4.25-2.209 7.207-2.209 1.294 0 2.587.138 3.881.414 1.077.215 2.033.506 2.864.875l-1.34 5.614a15.388 15.388 0 00-2.217-.829c-1.048-.276-1.987-.414-2.818-.414-1.51 0-2.264.43-2.264 1.289 0 .644 1.14 1.334 3.419 2.07 4.095 1.32 6.175 3.651 6.237 6.994 0 2.271-.848 4.08-2.541 5.43-1.848 1.443-4.466 2.163-7.854 2.163-3.111 0-5.714-.536-7.808-1.61l1.432-5.844z"
      />
      <path
        d="M91.011 26.526c1.879 1.135 3.973 1.702 6.283 1.702 1.664 0 2.495-.414 2.495-1.242 0-.645-.986-1.289-2.957-1.933-2.372-.736-4.127-1.749-5.266-3.037-.986-1.135-1.464-2.423-1.433-3.865 0-2.27.893-4.126 2.68-5.568 1.848-1.472 4.25-2.209 7.207-2.209 1.294 0 2.587.138 3.881.414 1.077.215 2.033.506 2.864.875l-1.34 5.614a15.388 15.388 0 00-2.217-.829c-1.048-.276-1.987-.414-2.818-.414-1.51 0-2.264.43-2.264 1.289 0 .644 1.14 1.334 3.419 2.07 4.095 1.32 6.175 3.651 6.237 6.994 0 2.271-.848 4.08-2.541 5.43-1.848 1.443-4.466 2.163-7.854 2.163-3.111 0-5.714-.536-7.808-1.61l1.432-5.844z"
        fill="#061B2B"
      />
      <g
        transform="translate(105.79 5.29)"
      >
        <path
          d="M1.425 3.023h-.51v-2.6H0V0h2.341v.424h-.916z"
          fill="#061B2B"
        />
        <mask
          fill="#fff"
          id="prefix__b"
        >
          <use
            xlinkHref="#prefix__a"
          />
        </mask>
        <path
          d="M4.401 3.023L3.411.498h-.018c.027.375.04.727.04 1.055v1.47h-.506V0h.786l.948 2.405h.014L5.65 0h.789v3.023h-.537V1.528A16.971 16.971 0 015.937.502h-.019l-1.024 2.52H4.4z"
          fill="#061B2B"
          mask="url(#prefix__b)"
        />
        <path
          d="M-101.009 27.06V11.446h-3.183V5.721h3.183v-.694c0-1.3.253-2.544.758-3.73.573-1.358 1.398-2.457 2.477-3.296.976-.78 2.155-1.359 3.537-1.735a14.105 14.105 0 013.69-.477c1.414 0 2.812.13 4.194.39l-.152 5.986a12.67 12.67 0 00-2.324-.217c-2.09 0-3.134.91-3.134 2.732v1.041h4.549v5.725h-4.448V27.06h-9.147zm17.284 0h9.147V5.72h-9.147v21.34zm4.548-23.55c-3.066 0-4.599-1.23-4.599-3.687 0-2.487 1.55-3.73 4.65-3.73 3.032 0 4.58 1.243 4.649 3.73 0 2.458-1.55 3.686-4.65 3.686h-.05zm8.59 9.497c0-1.3-.017-2.63-.05-3.99l-.152-3.296h7.884l.404 2.732h.152c.27-.346.59-.679.96-.997.472-.375.993-.723 1.567-1.04 1.482-.782 3.133-1.172 4.952-1.172 5.997 0 8.996 3.08 8.996 9.238V27.06h-9.147V15.436c0-2.602-1.062-3.903-3.184-3.903-.808 0-1.483.203-2.022.607-.37.319-.69.737-.96 1.258-.169.318-.253.839-.253 1.561v12.1h-9.146V13.008zm37.7-7.503h.405c2.83 0 4.919.94 6.266 2.82h.05c.068 0 .186-.723.355-2.17v-.13l.05-.043h7.833l.05.044h.051c-.134 1.533-.202 3.484-.202 5.855v12.144c0 4.742-1.213 8.008-3.638 9.802-2.325 1.965-5.981 2.949-10.967 2.949-3.605 0-6.721-.536-9.349-1.605v-.043l1.769-5.942h.05c2.392 1.04 4.818 1.561 7.278 1.561 2.83 0 4.65-1.056 5.458-3.166.134-.52.201-1.04.201-1.561V14.786c0-1.215-.539-2.183-1.616-2.906a3.996 3.996 0 00-1.82-.434c-1.92 0-3.15.84-3.689 2.516-.236.723-.354 1.62-.354 2.689v.043c0 2.342.91 3.89 2.73 4.64a3.87 3.87 0 001.313.217h.102c.269 0 .572-.028.91-.086v4.988c-.944.462-2.174.693-3.69.693h-.354c-3.707 0-6.62-1.445-8.743-4.337-1.111-1.792-1.667-3.7-1.667-5.725v-.52c0-3.411 1.346-6.274 4.042-8.587 2.19-1.649 4.582-2.473 7.177-2.473m17.13 14.963c2.056 1.07 4.347 1.605 6.874 1.605 1.82 0 2.729-.39 2.729-1.171 0-.607-1.079-1.214-3.234-1.822-2.595-.693-4.516-1.648-5.762-2.862-1.078-1.07-1.6-2.284-1.566-3.643 0-2.14.976-3.889 2.93-5.248 2.022-1.388 4.65-2.082 7.885-2.082 1.414 0 2.83.13 4.245.39 1.178.203 2.223.477 3.133.824L.012 11.75a18.607 18.607 0 00-2.425-.78c-1.146-.261-2.174-.391-3.083-.391-1.651 0-2.477.405-2.477 1.214 0 .607 1.247 1.258 3.74 1.952 4.48 1.243 6.755 3.44 6.823 6.592 0 2.14-.927 3.846-2.78 5.118-2.022 1.36-4.885 2.038-8.591 2.038-3.403 0-6.25-.505-8.54-1.518l1.566-5.508z"
          fill="#656565"
          mask="url(#prefix__b)"
        />
        <path
          d="M-101.009 27.06V11.446h-3.183V5.721h3.183v-.694c0-1.3.253-2.544.758-3.73.573-1.358 1.398-2.457 2.477-3.296.976-.78 2.155-1.359 3.537-1.735a14.105 14.105 0 013.69-.477c1.414 0 2.812.13 4.194.39l-.152 5.986a12.67 12.67 0 00-2.324-.217c-2.09 0-3.134.91-3.134 2.732v1.041h4.549v5.725h-4.448V27.06h-9.147zm17.284 0h9.147V5.72h-9.147v21.34zm4.548-23.55c-3.066 0-4.599-1.23-4.599-3.687 0-2.487 1.55-3.73 4.65-3.73 3.032 0 4.58 1.243 4.649 3.73 0 2.458-1.55 3.686-4.65 3.686h-.05zm8.59 9.497c0-1.3-.017-2.63-.05-3.99l-.152-3.296h7.884l.404 2.732h.152c.27-.346.59-.679.96-.997.472-.375.993-.723 1.567-1.04 1.482-.782 3.133-1.172 4.952-1.172 5.997 0 8.996 3.08 8.996 9.238V27.06h-9.147V15.436c0-2.602-1.062-3.903-3.184-3.903-.808 0-1.483.203-2.022.607-.37.319-.69.737-.96 1.258-.169.318-.253.839-.253 1.561v12.1h-9.146V13.008zm37.7-7.503h.405c2.83 0 4.919.94 6.266 2.82h.05c.068 0 .186-.723.355-2.17v-.13l.05-.043h7.833l.05.044h.051c-.134 1.533-.202 3.484-.202 5.855v12.144c0 4.742-1.213 8.008-3.638 9.802-2.325 1.965-5.981 2.949-10.967 2.949-3.605 0-6.721-.536-9.349-1.605v-.043l1.769-5.942h.05c2.392 1.04 4.818 1.561 7.278 1.561 2.83 0 4.65-1.056 5.458-3.166.134-.52.201-1.04.201-1.561V14.786c0-1.215-.539-2.183-1.616-2.906a3.996 3.996 0 00-1.82-.434c-1.92 0-3.15.84-3.689 2.516-.236.723-.354 1.62-.354 2.689v.043c0 2.342.91 3.89 2.73 4.64a3.87 3.87 0 001.313.217h.102c.269 0 .572-.028.91-.086v4.988c-.944.462-2.174.693-3.69.693h-.354c-3.707 0-6.62-1.445-8.743-4.337-1.111-1.792-1.667-3.7-1.667-5.725v-.52c0-3.411 1.346-6.274 4.042-8.587 2.19-1.649 4.582-2.473 7.177-2.473m17.13 14.963c2.056 1.07 4.347 1.605 6.874 1.605 1.82 0 2.729-.39 2.729-1.171 0-.607-1.079-1.214-3.234-1.822-2.595-.693-4.516-1.648-5.762-2.862-1.078-1.07-1.6-2.284-1.566-3.643 0-2.14.976-3.889 2.93-5.248 2.022-1.388 4.65-2.082 7.885-2.082 1.414 0 2.83.13 4.245.39 1.178.203 2.223.477 3.133.824L.012 11.75a18.607 18.607 0 00-2.425-.78c-1.146-.261-2.174-.391-3.083-.391-1.651 0-2.477.405-2.477 1.214 0 .607 1.247 1.258 3.74 1.952 4.48 1.243 6.755 3.44 6.823 6.592 0 2.14-.927 3.846-2.78 5.118-2.022 1.36-4.885 2.038-8.591 2.038-3.403 0-6.25-.505-8.54-1.518l1.566-5.508z"
          fill="#061B2B"
          mask="url(#prefix__b)"
        />
      </g>
    </g>
  </svg>
</div>
`;
